all-recipes.html updated

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,16 @@
  
     <title>
       {% block title %}
-        My Pantryy
+        MyPantryy
       {% endblock %}
     </title>
-
+    <class <nav>
+        <a href="/">Home</a>
+        <a href="#">About Us</a>
+        <a href="/recipes">Recipes</a>
+        <a href="/users">Users</a>
+    </nav>
+</class>
 
     {% block head %}
 
@@ -42,48 +48,6 @@
     {% block after_body %}{% endblock %}
   </body>
 
-  <header   
-    <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
-
-      <a class="Ubermelon-brand" href="#">Ubermelon</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active text-white" href="#">Contact</a>
-          </li>
-        </ul>
-
-        <ul>
-        <li class="nav-item">
-          <a class="nav-link active text-white" href="#">Shop</a>
-          <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active text-white" href="#">fav Melons</a>
-          </li>
-        
-        <li class="nav-item">
-          <a class="nav-link active text-white" href="#">Settings</a>
-        
-        <li class="nav-item">
-          <a class="nav-link active text-white" href="#">Profile</a>
-        
-            
-            
-        </ul>
-        
-      </div>
-    </div>
-  </nav>
-  </header>
-
+ 
 
 </html>
