--- a/static/style.css
+++ b/static/style.css
@@ -13,8 +13,8 @@
 
 h1 {
     font-family: Arial, ui-rounded, sans-serif;
-    color: rgb(255, 255, 255);
-    background-color: rgb(51, 51, 51);
+    color: hsl(98, 75%, 14%);
+    background-color: hsl(123, 69%, 82%);
     /* text-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px; */
 }
 
@@ -28,8 +28,26 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
  
-.navbar {
-    background-color: #89a203;
-}
+nav {
+    display: flex;
+    gap: 0.5rem;
+  }
+  
+  a {
+    flex: 1;
+    background-color: #333;
+    color: #fff;
+    border: 1px solid;
+    padding: 0.5rem;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.5s ease-out;
+  }
+  
+  a:hover,
+  a:focus {
+    background-color: #fff;
+    color: #333;
+  }
 
 
