Log Out working

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
         <a href="#">About Us</a>
         <a href="/recipes">Recipes</a>
         <a href="/users">Users</a>
+        <a href="/logout">Log Out</a>
     </nav>
 </class>
 
