--- a/static/style.css
+++ b/static/style.css
@@ -23,10 +23,10 @@ h2 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
+/* body {
     background-color: lightyellow;
-    font-family: Arial, Helvetica, sans-serif;
-}
+    font-family: Arial, Helvetica, sans-serif; */
+/* } */
  
 nav {
     display: flex;
@@ -49,5 +49,19 @@ nav {
     background-color: #fff;
     color: #333;
   }
-
-
+  div#fleft {
+    display: block !important;
+    background-color: rgb(230, 191, 175) !important;
+    width: 300px !important;
+    height: 500px !important;
+    float: left !important;
+    margin-left: 50px !important;
+}
+div#fright {
+    display: block !important;
+    background-color: rgb(230, 191, 175) !important;
+    width: 300px !important;
+    height: 500px !important;
+    float: left !important;
+    margin-left: 50px !important;
+}
