--- a/static/style.css
+++ b/static/style.css
@@ -14,7 +14,9 @@
 h1 {
     font-family: Arial, ui-rounded, sans-serif;
     color: hsl(98, 75%, 14%);
-    background-color: hsl(123, 69%, 82%);
+    background-color: hsl(22, 63%, 73%);
+    align-self: center;
+    text-align-last: center;
     /* text-shadow: #FFF 0 -1px 4px, #ff0 0 -2px 10px, #ff8000 0 -10px 20px, red 0 -18px 40px; */
 }
 
@@ -23,14 +25,14 @@ h2 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* body {
+body {
     background-color: lightyellow;
-    font-family: Arial, Helvetica, sans-serif; */
-/* } */
+    font-family: Arial, Helvetica, sans-serif; 
+}
  
 nav {
     display: flex;
-    gap: 0.5rem;
+    gap: 1.5rem;
   }
   
   a {
@@ -49,6 +51,7 @@ nav {
     background-color: #fff;
     color: #333;
   }
+  
   div#fleft {
     display: block !important;
     background-color: rgb(230, 191, 175) !important;
