--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         MyPantryy
       {% endblock %}
     </title>
-    <class <nav>
+    <class nav>
         <a href="/">Home</a>
         <a href="#">About Us</a>
         <a href="/recipes">Recipes</a>
