--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 {% block body %}
-  <h1>Welcome to MyPantry!</h1>
+  <h1>MyPantry!</h1>
 
 
   <h4>Log In</h4>
   <form action="/login" method="POST">
     <p>
-      Email <input type="text" name="email">
+      Email <input required type="text" name="email">
     </p>
 
     <p>
-      Password <input type="password" name="password">
+      Password <input required type="password" name="password">
     </p>
 
     <p>
@@ -24,14 +24,14 @@
   <h4>Create an Account</h4>
   <form action="/newusers" method="POST">
     <p>
-      Name <input type="text" name="name">
+      Name <input required type="text" name="name">
     </p>
     <p>
-      Email <input type="text" name="email">
+      Email <input required type="text" name="email">
     </p>
 
     <p>
-      Password <input type="password" name="password">
+      Password <input required type="password" name="password">
     </p>
 
     <p>
