--- a/templates/userdetail.html
+++ b/templates/userdetail.html
@@ -11,9 +11,10 @@
 <div>
   <div id="fleft">
     <h2>Add Your Own Recipe to your Profile!</h2>
+
     <form action="/addrecipe" method="POST">
     <div class="form-group">
-        <input type="text" class="form-control" id="addrecipe" placeholder="Example: Chicken Pot Pie">
+        <input type="text" class="form-control" name="recipename" placeholder="Example: Chicken Pot Pie">
       </div>
     <div class="form-group">
         <label for="addingredients">Select Ingredients from our list! </label>
@@ -26,18 +27,39 @@
             <label for="addingredients">Select Ingredients from our list! </label> 
             <br>
             <br>
-            <input type="text" class="form-control" id="addingredients" placeholder="Or enter in you ingredients yourself:">
+            <input type="text" class="form-control" id="addingredients" placeholder="Or enter ingredients yourself:">
           </select>
         </div>
           <div class="form-group">
               <label for="add_recipe_instructions"> Cooking Instructions: </label> 
-              <textarea class="form-group" id = "add_recipe_instructions" rows="8"
-      
+              <textarea class="form-group" name ="recipe_instructions" id="add_recipe_instructions" rows="3"></textarea>
+
           </div>
+          <div class="form-group">
+            <label for="add_recipe_cookingtime"> Cooking time: </label>
+            <input type="text" class="form-control" name="recipe_cookng_time" id="add_recipe_cookingtime" placeholder="In mins">
+          </div>
+          <div class="form-group">
+            <label for="add_recipe_preptime"> Prep time: </label>
+            <input type="text" class="form-control" name ="recipe_prep_time" id="add_recipe_preptime" placeholder="In mins">
+          </div>
+          <div class="form-group">
+            <label for="recipe_created_at"> Created at:  </label>
+            <input type="text" readonly class="form-control" id="recipe_created_at" placeholder="datetime here*">
+          </div>
+          <div class="form-group">
+            <label for="add_picture">Add an Image</label>
+            <input type="file" name="recipe_image" class="form-control-file" id="add_picture">
+          </div>
+          <br><br>
+          <button type="submit" class="btn btn-primary mb-2" id="entry-submit">Post Recipe</button>
+            
+          </button>
         </div>
     </form>
   </div>
-     
+    
+
   <div id="fright">
       <h2> What items do you have on hand in your pantry?  </h2>
       <h4> Enter your pantry ingredients and find matching recipes</h4>
@@ -60,86 +82,3 @@
 
 {% endblock %}
 
-<!-- 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Website Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-  .fakeimg {
-    height: 200px;
-    background: #aaa;
-  }
-  </style>
-</head>
-<body>
-
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>My First Bootstrap Page</h1>
-  <p>Resize this responsive page to see the effect!</p> 
-</div>
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills nav-stacked">
-        <li class="active"><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
-        <li><a href="#">Link 3</a></li>
-      </ul>
-      <hr class="hidden-sm hidden-md hidden-lg">
-    </div>
-    <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    </div>
-  </div>
-</div>
-
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Footer</p>
-</div>
-
-</body>
-</html> -->
