--- a/templates/allrecipes.html
+++ b/templates/allrecipes.html
@@ -7,6 +7,7 @@
         <li>
             <a href="/recipes/{{ recipe.recipe_id }}">
               {{ recipe.name }}
+              {# <!-- {{ recipe.Instructions }} --> #}
             </a> 
             
         </li>
