--- a/templates/userdetail.html
+++ b/templates/userdetail.html
@@ -2,9 +2,6 @@
 
 {% block title %}{{ user.name }} - Profile Page  {% endblock %}
 
-<script type="text/javascript" src="../static/ingredientquantity.js"></script>
-
-
 {% block body %}
 <h1> Welcome {{ user.name }}! Let's Cook!</h1>
 
@@ -16,6 +13,7 @@
     <div class="form-group">
         <input type="text" class="form-control" name="recipename" placeholder="Example: Chicken Pot Pie">
       </div>
+     
     <div class="form-group">
         <label for="addingredients">Select Ingredients from our list! </label>
         Select all that apply to your recipe.
@@ -24,11 +22,11 @@
             {% for ingredient in ingredients %}
                 <option>{{ ingredient.name }}</option>
             {% endfor %}
-            <label for="addingredients">Select Ingredients from our list! </label> 
+            
             <br>
             <br>
-            <input type="text" class="form-control" name = "addingredient" id="addingredients" placeholder="Or enter ingredients yourself:" onchange="onIngredientsSelectionChangedtext(this)">
-          </select>
+        </select>
+        <input type="text" class="form-control" name = "addingredient" id="addingredientstext" placeholder="Or enter ingredients yourself:" oninput="onIngredientsSelectionChangedtext(this)"></input>
         <div>
           Enter Quantity:
         </div>
@@ -82,31 +80,7 @@
   </div>
 </div>
 
-<script>
-  function onIngredientsSelectionChanged(select) {
-
-    console.log(select.value);
-    var options = select && select.options;
-    var opt;
-    document.getElementById("quantitycontainer").innerHTML = "";
-
-    for (var i=0, iLen=options.length; i<iLen; i++) {
-      opt = options[i];
-
-      if (opt.selected) {
-       // result.push(opt.value || opt.text);
-        var textbox = document.createElement("input");
-        textbox.type = "text";
-        textbox.placeholder = opt.value;
-       //  textboxes.push())
-       document.getElementById("quantitycontainer").appendChild(textbox);
-      }
-     }
-    
-  //  let other=  document.getElementById("otheringredients").value.split(",");
-    
-  }
-</script>
+<script type="text/javascript" src="../static/ingredientquantity.js"></script>
 
 {% endblock %}
 
