--- a/templates/allusers.html
+++ b/templates/allusers.html
@@ -8,7 +8,7 @@
 {% for user in users %}
     <ul>
         <li>
-            <a href="/user/{{ user.user_id }}">
+            <a href="/users/{{ user.user_id }}">
               {{ user.user_id }} <br>
               {{ user.name }} <br>
               {% for recipe in user.recipes %}
