--- a/templates/userdetail.html
+++ b/templates/userdetail.html
@@ -11,22 +11,22 @@
 
     <form action="/addrecipe" method="POST">
     <div class="form-group">
-        <input type="text" class="form-control" name="recipename" placeholder="Example: Chicken Pot Pie">
+        <input type="text" class="form-control" name="recipename" placeholder="Example: Chicken Pot Pie"></input>
       </div>
      
     <div class="form-group">
-        <label for="addingredients">Select Ingredients from our list! </label>
-        Select all that apply to your recipe.
+        <label for="addingredients"></label>
+        <h4>Select all that apply to your recipe</h4>
         <select multiple class="form-control" id="addingredients" name ="addingredients" onchange="onIngredientsSelectionChanged(this)">
             
             {% for ingredient in ingredients %}
                 <option>{{ ingredient.name }}</option>
             {% endfor %}
-            
-            <br>
-            <br>
         </select>
-        <input type="text" class="form-control" name = "addingredient" id="addingredientstext" placeholder="Or enter ingredients yourself:" oninput="onIngredientsSelectionChangedtext(this)"></input>
+        <h4>Or enter your own ingredients below:</h4>
+        <label for = "addingredient"> Option 2:</label>
+        <input type="text" class="form-control" name = "addingredient" id="addingredientstext" placeholder="Eggs,milk,yogurt..." oninput="onIngredientsSelectionChangedtext(this)"></input>
+        
         <div>
           Enter Quantity:
         </div>
@@ -34,6 +34,7 @@
         </div>
           <div class="form-group">
               <label for="add_recipe_instructions"> Cooking Instructions: </label> 
+              <!-- <div grid -->
               <textarea class="form-group" name ="recipe_instructions" id="add_recipe_instructions" rows="3"></textarea>
 
           </div>
@@ -56,26 +57,26 @@
           <br><br>
           <button type="submit" class="btn btn-primary mb-2" id="entry-submit">Post Recipe</button>
             
-          </button>
+          
         </div>
     </form>
   </div>
     
 
   <div id="fright">
-      <h2> What items do you have on hand in your pantry?  </h2>
-      <h4> Enter your pantry ingredients and find matching recipes</h4>
+      <h2> What items do you have on hand in your pantry? </h2>
+     
     <form action="/pantryitems" method="POST">
-      <p>
-        Pantry Ingredient: <input type="text" name="ingredient" value = "first ingredient"><br>
-        Pantry Ingredient: <input type="text" name="ingredient" value = "second ingredient"><br>
-        Pantry Ingredient: <input type="text" name="ingredient" value = "third ingredient"><br>
-        Pantry Ingredient: <input type="text" name="ingredient" value = "fourth ingredient"><br>
-        Pantry Ingredient: <input type="text" name="ingredient" value = "fifth ingredient"><br>
-        
-        
+      <label for="addpantryingredients">Select up to 5 ingredients and see which recipes you can cook</label>
+      <select multiple class="form-control" id="addpantryingredients" name ="addpantryingredients">
+            
+        {% for ingredient in ingredients %}
+            <option>{{ ingredient.name }}</option>
+        {% endfor %}
+    </select>
 
-      </p>
+    <button type="submit" class="btn btn-primary mb-2" id="entry-submit">I'm feelin lucky</button>
+    
     </form>
   </div>
 </div>
