--- a/templates/userdetail.html
+++ b/templates/userdetail.html
@@ -67,7 +67,7 @@
       <h2> What items do you have on hand in your pantry? </h2>
      
     <form action="/pantryitems" method="POST">
-      <label for="addpantryingredients">Select up to 5 ingredients and see which recipes you can cook</label>
+      <label for="addpantryingredients">Select ingredients and see which recipes you can cook</label>
       <select multiple class="form-control" id="addpantryingredients" name ="addpantryingredients">
             
         {% for ingredient in ingredients %}
