--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
+    <!-- Bootstrap JS only-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- CSS only-->
     <link rel="stylesheet" href="/static/style.css">
 
@@ -20,14 +22,7 @@
         MyPantryy
       {% endblock %}
     </title>
-    <class nav>
-        <a href="/">Home</a>
-        <a href="#">About Us</a>
-        <a href="/recipes">Recipes</a>
-        <a href="/users">Users</a>
-        <a href="/logout">Log Out</a>
-    </nav>
-</class>
+   
 
     {% block head %}
 
@@ -35,6 +30,48 @@
   </head>
 
 <body>
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    
+    <a href="/" class="navbar-brand">MyPantry</a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarmenu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id = "#navbarmenu">
+    <ul class="navbar-nav ml-auto">
+      {% if 'user.user_id' not in session %}
+      <li class="nav-item">
+        <a href="#" class = "nav-link">About</a>
+      </li>
+      <li class="nav-item">
+        <a href="/create-account" class = "nav-link">Create Account</a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a href="/recipes" class = "nav-link">Recipes</a>
+      </li>
+      <li class="nav-item">
+        <a href="/logout" class = "nav-link">Log Out</a>
+      </li>
+      {% endif %}
+
+    </ul>
+    <form method = "POST" action = "/search" class = "d-flex">
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2 ml-auto" type="search" placeholder="recipes by name" aria-label="Search" name = "recipesearched">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+
+    </div>
+  </nav>
+  <!-- <class nav>
+    <a href="/">Home</a>
+    <a href="#">About Us</a>
+    <a href="/recipes">Recipes</a>
+    <a href="/users">Users</a>
+    <a href="/logout">Log Out</a>
+</nav>
+</class> -->
 
     {% for msg in get_flashed_messages() %}
     <p class="flash-msg">
@@ -47,7 +84,12 @@
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
+    <!-- Bootstrap JS only-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
  
 
 </html>
