--- a/templates/recipesfound.html
+++ b/templates/recipesfound.html
@@ -7,7 +7,7 @@
     <ul>
         {% if recipe_list %}
             {% for recipe in recipe_list %}
-                <li>{{ recipe.name }}</li>
+                <li><a href= "/recipes/{{ recipe.recipe_id }}">{{ recipe.name }}</a></li>
             {% endfor %}
         {% else %}
             <h4>No recipes found</h4>
