My recipes showing up on main page

--- a/templates/recipedetails.html
+++ b/templates/recipedetails.html
@@ -21,7 +21,7 @@
 <div class="form-check">
     <form action = "/like" method="POST">
         
-        {% if liked == False %}
+        {% if liked %}
         <button type="button" class="btn btn-primary mb-2" disabled>Liked </button> 
         
 
