--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,43 @@
 /* Style for mypantry Site */
+@import url("https://fonts.googleapis.com/css?family=Libre+Franklin|Source+Sans+Pro");
+
 
 .flash-msg {
-    background-color: rgb(112, 89, 199);
+    background-color: rgb(242, 240, 248);
     font-family: Arial, ui-rounded, sans-serif;
 }
 
-.recipe {
-    color: white;
-    background-color: limegreen;
-    font-family: "Open Sans", sans-serif;
+/* MY HOMEPAGE */
+
+body > .homepage{
+
+  font-family: "Source Sans Pro", sans-serif;
+
+}
+
+
+.imageContainer { 
+
+  position: absolute;
+  
+}
+.homepage-image {
+    
+    position: inherit;
+    width: 1000px;
+    height: 965px;
+    left: 536px;
+    top: 59px;
+    padding-left: 50px;
+    padding-top: 50px;
+}
+.log-in-form {
+
+  position: absolute;
+  width: 230px;
+  height: 147px;
+  left: 159px;
+  top: 258px;
 }
 
 h1 {
@@ -28,13 +57,6 @@ h2 {
     font-family: "Open Sans", sans-serif;
 }
 
-body {
-    background-image: url("img/MyPantry.jpg");
-    background-color: rgb(250, 250, 250);
-    background-size: cover;
-    background-repeat: no-repeat;
-    font-family: "Open Sans", sans-serif; 
-}
  
 nav {
     display: flex;
