--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,22 +1,38 @@
 {% extends 'base.html' %}
 {% block body %}
-  <!-- <h1>MyPantry!</h1> -->
 
 
-  <h4>Log In</h4>
-  <form action="/login" method="POST">
-    <p>
-      Email <input required type="text" name="email">
-    </p>
 
-    <p>
-      Password <input required type="password" name="password">
-    </p>
 
-    <p>
-      <input type="submit">
-    </p>
-  </form>
+
+<div class="homepage">
+  <div class="container-fluid">
+   
+      <div class="imageContainer">
+        <img src="static/img/MyPantry.jpg" class="homepage-image" , width="300px", height='300px'/>
+        <div class="log-in-form">
+          <form action="/login" method="POST">
+            <p>
+              Email <input required type="text" name="email">
+            </p>
+        
+            <p>
+              Password <input required type="password" name="password">
+            </p>
+        
+            <p>
+              <input type="submit" value = "Log In">
+            </p>
+          </form>
+
+
+      </div>
+  </div>
+</div>
+        
+
+
+  
 
 
 
