--- a/templates/userdetail.html
+++ b/templates/userdetail.html
@@ -20,19 +20,25 @@
   {% endfor %}
   </ul>
 </div>
-<div>
-  <h2>Previous Pantry :</h2>
-  <ul>
-  {% for submission in user.pantry_ingredients %}
-    
-    <li>{{ submission.submitted_at }} {{ submission.ingredient.name }} </li>
 
-  {% endfor %}
-  </ul>
+<div class="panel-group">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" href="#collapse1">Collapsible panel</a>
+      </h4>
+    </div>
+    <div id="collapse1" class="panel-collapse collapse">
+      <div class="panel-body">Panel Body</div>
+      <div class="panel-footer">Panel Footer</div>
+    </div>
+  </div>
+</div> 
+
+<div>
+  <h2>{{ submissions }} </h2>
 </div>
 
-
-<div>
   <div id="fleft">
     <h2>Add Your Own Recipe to your Profile!</h2>
 
